--- a/src/app/salaryform/salaryform.component.html
+++ b/src/app/salaryform/salaryform.component.html
@@ -2,7 +2,7 @@
   <div class="form-group">
     <label for="inputBruto" class="sr-only">Bruto plača</label>
     <input
-      type="text"
+      type="number"
       [(ngModel)]="salary.bruto"
       id="inputBruto"
       name="inputBruto"
@@ -10,33 +10,30 @@
       placeholder="bruto znesek npr. 2500"
       required=""
       autofocus=""
-      (click)="clearInputBruto()"
     />
   </div>
   <div class="form-group">
     <label for="inputTransportAndLunch" class="sr-only">Prevoz in malica</label>
     <input
-      type="text"
+      type="number"
       id="inputTransportAndLunch"
       name="inputTransportAndLunch"
       [(ngModel)]="salary.transportAndLunch"
       class="form-control"
       placeholder="strošek prevoza in malice npr. 200"
       required=""
-      (click)="clearInputTransportAndLunch()"
     />
   </div>
   <div class="form-group">
     <label for="inputKidsNumber" class="sr-only">Prevoz in malica</label>
     <input
-      type="text"
+      type="number"
       id="inputKidsNumber"
       name="inputKidsNumber"
       [(ngModel)]="salary.noOfChildren"
       class="form-control"
       placeholder="št. vzdrževanih otrok npr. 2"
       required=""
-      (click)="clearInputKidsNumber()"
     />
   </div>
 
