new year commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
 <div class="jumbotron">
   <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-5">Izračun plače za leto {{year}}</h1>
-    <p>Za izračun plače vpišete samo 3 podatke: znesek bruto plače, znesek prevoza in malice ter število
-      vzdrževanih članov (npr. otrok). </p>
+    <h1 class="display-5">Izračun plače za leto {{ year }}</h1>
+    <p>
+      Za izračun plače vpišete samo 3 podatke: znesek bruto plače, znesek
+      prevoza in malice ter število vzdrževanih članov (npr. otrok). Izračun je
+      izključno informativne narave.
+    </p>
   </div>
 </div>
 
