--- a/src/app/salaryform/salaryform.component.html
+++ b/src/app/salaryform/salaryform.component.html
@@ -1,6 +1,5 @@
 <form class="form-signin">
   <div class="form-group">
-    <label for="inputBruto" class="sr-only">Bruto plača</label>
     <input
       type="number"
       [(ngModel)]="salary.bruto"
@@ -10,10 +9,10 @@
       placeholder="bruto znesek npr. 2500"
       required=""
       autofocus=""
+      (input)="calculate()"
     />
   </div>
   <div class="form-group">
-    <label for="inputTransportAndLunch" class="sr-only">Prevoz in malica</label>
     <input
       type="number"
       id="inputTransportAndLunch"
@@ -22,10 +21,10 @@
       class="form-control"
       placeholder="strošek prevoza in malice npr. 200"
       required=""
+      (input)="calculate()"
     />
   </div>
   <div class="form-group">
-    <label for="inputKidsNumber" class="sr-only">Prevoz in malica</label>
     <input
       type="number"
       id="inputKidsNumber"
@@ -34,6 +33,7 @@
       class="form-control"
       placeholder="št. vzdrževanih otrok npr. 2"
       required=""
+      (input)="calculate()"
     />
   </div>
 
@@ -47,17 +47,13 @@
         id="generalRelief"
         name="generalRelief"
         [(ngModel)]="salary.withGeneralRelief"
+        (change)="calculate()"
       />
       <span class="slider"></span>
     </label>
   </div>
 
   <hr />
-  <div class="form-group">
-    <button type="button" class="btn btn-secondary" (click)="calculate()">
-      Izračunaj!
-    </button>
-  </div>
 
   <span class="mt-5 mb-3 text-muted">Nakazilo na račun:</span>
 
