--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-<div class="jumbotron">
+<!-- <div class="jumbotron">
   <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-5">Izračun plače za leto {{ year }}</h1>
+    <h1 class="display-5">Izračun plače za leto 2019</h1>
     <p>
       Za izračun plače vpišete samo 3 podatke: znesek bruto plače, znesek
       prevoza in malice ter število vzdrževanih članov (npr. otrok). Izračun je
       izključno informativne narave.
     </p>
   </div>
-</div>
+</div> -->
 
 <app-salaryform></app-salaryform>
