detail in progress

--- a/src/app/salary-detail/salary-detail.component.html
+++ b/src/app/salary-detail/salary-detail.component.html
@@ -1,3 +1,22 @@
-<p>
-  salary-detail works!
-</p>
+<div class="container">
+  <table class="table table-borderless text-left">
+    <tbody>
+      <tr>
+        <th scope="row">Bruto plača</th>
+        <td>2500</td>
+      </tr>
+      <tr>
+        <th scope="row">Neto plača</th>
+        <td>1500</td>
+      </tr>
+      <tr>
+        <th scope="row">Nakazilo na račun</th>
+        <td>2000</td>
+      </tr>
+      <tr>
+        <th scope="row">Strošek delodajalca</th>
+        <td>3200</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
