--- a/src/app/salary-detail/salary-detail.component.html
+++ b/src/app/salary-detail/salary-detail.component.html
@@ -1,21 +1,34 @@
-<div class="container">
-  <table class="table table-borderless text-left">
+<button
+  class="btn btn-outline-secondary"
+  type="button"
+  data-toggle="collapse"
+  data-target="#paymentDetails"
+  aria-expanded="false"
+  aria-controls="paymentDetails"
+>
+  Podrobnosti
+</button>
+<div class="container payment-details">
+  <table
+    class="table table-borderless  mx-auto w-auto collapse"
+    id="paymentDetails"
+  >
     <tbody>
       <tr>
         <th scope="row">Bruto plača</th>
-        <td>2500</td>
+        <td>2500 €</td>
       </tr>
       <tr>
         <th scope="row">Neto plača</th>
-        <td>1500</td>
+        <td>1500 €</td>
       </tr>
       <tr>
         <th scope="row">Nakazilo na račun</th>
-        <td>2000</td>
+        <td>2000 €</td>
       </tr>
       <tr>
         <th scope="row">Strošek delodajalca</th>
-        <td>3200</td>
+        <td>3200 €</td>
       </tr>
     </tbody>
   </table>
